login and auto login using token ready to go -- gave up on server side rendering for now

--- a/nom-ui/src/app/app.component.html
+++ b/nom-ui/src/app/app.component.html
@@ -8,7 +8,7 @@
       (click)="toggleTheme()"
       class="app-header__theme-toggle"
     >
-      <mat-icon>{{ isDarkTheme ? "dark_mode" : "light_mode" }}</mat-icon>
+      <mat-icon>{{ isDarkTheme ? 'dark_mode' : 'light_mode' }}</mat-icon>
     </button>
 
     <div class="app-user-menu" (click)="toggleUserMenu()">
@@ -29,11 +29,11 @@
 </header>
 <main class="app-content">
   <!-- User Popover/Dropdown Menu -->
+  @if (isLoggedIn) {
   <div
     class="app-user-menu__dropdown"
     [class.app-user-menu__dropdown--open]="isUserMenuOpen"
   >
-    @if (isLoggedIn) {
     <ul class="app-user-menu__logged-in-list">
       <li>
         <a
@@ -53,33 +53,20 @@
       </li>
       <li>
         <a
-          (click)="mockLogout()"
+          (click)="logout()"
           class="app-user-menu__link app-user-menu__link--logout"
           >Logout</a
         >
       </li>
     </ul>
-    } @else {
-    <div class="app-user-menu__logged-out-content">
-      <h4 class="app-user-menu__prompt">Welcome!</h4>
-      <!-- Embedding the Login Component directly -->
-      <app-login class="app-user-menu__login-component"></app-login>
-      <p class="app-user-menu__register-prompt">
-        Don't have an account?
-        <a
-          routerLink="/register"
-          (click)="toggleUserMenu()"
-          class="app-user-menu__register-link"
-          >Register Here</a
-        >
-      </p>
-      <!-- A mock login button for demonstration -->
-      <button (click)="mockLogin()" class="app-user-menu__mock-login-button">
-        Mock Login
-      </button>
-    </div>
-    }
   </div>
+  } @else {
+  <app-login
+    [class.app-user-menu__dropdown--open]="isUserMenuOpen"
+    class="app-user-menu__dropdown app-user-menu__logged-out-content app-user-menu__login-component"
+  ></app-login>
+
+  }
   <router-outlet></router-outlet>
 </main>
 
