Setup for https localhost api access without cors issues -- have to use proxy.config.json(or proxy.config.development.json)

--- a/nom-ui/src/app/components/auth/login/login.component.scss
+++ b/nom-ui/src/app/components/auth/login/login.component.scss
@@ -1,4 +1,4 @@
-@use '../../../../../../variables.scss' as vars;
+@use '../../../../variables' as vars;
 
 .login {
   // All core layout, typography, and color styling is now managed by .nom- classes from system.scss.
