--- a/nom-ui/src/app/components/auth/update-two-factor/update-two-factor.component.scss
+++ b/nom-ui/src/app/components/auth/update-two-factor/update-two-factor.component.scss
@@ -1,4 +1,4 @@
-@use '../../../../../../variables' as vars;
+@use '../../../../variables' as vars;
 
 .two-factor {
   // All core layout, typography, and color styling for generic elements are now managed by .nom- classes from system.scss.
